--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,15 @@
-Package                  Version
------------------------- --------
-aiohttp                  3.8.4
-aiosignal                1.3.1
-android-auto-play-opencv 1.0.8
-async-timeout            4.0.2
-attrs                    23.1.0
-certifi                  2023.5.7
-charset-normalizer       3.1.0
-click                    8.1.3
-colorama                 0.4.6
-Flask                    2.2.3
-frozenlist               1.3.3
-future                   0.18.3
-idna                     3.4
-itsdangerous             2.1.2
-Jinja2                   3.1.2
-line-bot-sdk             2.4.2
-MarkupSafe               2.1.2
-MouseInfo                0.1.3
-multidict                6.0.4
-numpy                    1.24.2
-opencv-python            4.7.0.68
-Pillow                   9.5.0
-pip                      22.0.4
-psycopg2                 2.9.6
-PyAutoGUI                0.9.53
-PyGetWindow              0.0.9
-PyMsgBox                 1.0.9
-pyocr                    0.8.3
-pyperclip                1.8.2
-PyRect                   0.2.0
-PyScreeze                0.1.28
-pytweening               1.0.4
-requests                 2.28.2
-setuptools               58.1.0
-urllib3                  1.26.15
-Werkzeug                 2.2.3
-yarl                     1.9.2
+line-bot-sdk==2.4.2
+Pillow==9.5.0
+psycopg2 ==2.9.6
+requests == 2.28.2
+blinker==1.6.2
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.3
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+Pillow==9.5.0
+pyocr==0.8.3
+Werkzeug==2.2.3
